--- a/CsharpPractice/CsharpPractice/CsharpPractice.csproj
+++ b/CsharpPractice/CsharpPractice/CsharpPractice.csproj
@@ -49,6 +49,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="all_exceptions.txt" />
+    <Content Include="bin\Debug\all_exceptions.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
